Actually fix vertical alignment in the simple toggle
You miss 100% of the shots you don't take.

Ref dd9c9fd68c468c2ffbd8a5a2bafd87876079e3d9

--- a/src/css/metacatui-common.css
+++ b/src/css/metacatui-common.css
@@ -6461,6 +6461,7 @@ body.mapMode{
   height: 15px;
   border-radius: 50%;
   vertical-align: middle;
+  margin-bottom: 0;
 }
 
 .simple-toggle input {
